CHANGES IN VERSION 1.32
-----------------------

BUG FIXES AND MINOR IMPROVEMENTS

    o (1.31.16) Note the use of `cat` and `print` outside of show methods.
    o (1.31.15) Check for pinned package versions in the `DESCRIPTION` file
    denoted by the use of `==`.
    o (1.31.14) Enhancements to internal helper functions and
    `BiocCheckGitClone`
    o (1.31.13) Revert move to new package checks. Update Bioc-devel mailing
    list check to fail early when not in BBS environment.
    o (1.31.12) Move Bioc-devel mailing list and support site registration
    checks to new package checks.
    o (1.31.10) Various internal improvements to `BiocCheck` and the
    identification of the package directory and name.
    o (1.31.6) Use a more reliable approach to identify package name from the
    `DESCRIPTION` file.
    o (1.31.5) Fixed bug in the case where the `VignetteBuilder` field in the
    a package's `DESCRIPTION` has more than one listed.
    o (1.31.3) Add `BioCbooks` repository url to
    `checkIsPackageNameAlreadyInUse`, `VIEWS` file is pending.
    o (1.31.2) Fix logical length > 1 error in `checkImportSuggestions`
      (@vjcitn, #141)
    o (1.31.1) Simplify check for function lengths; remove excessive dots.

CHANGES IN VERSION 1.30
-----------------------

NEW FEATURES

    o (1.29.10) Check for `Sys.setenv` and `suppressWarnings`/`suppressMessages`
    o (1.29.8) Check for `sessionInfo` / `session_info` in vignette code.
    o (1.29.5) Check for installation calls in vignette code.
    o (1.29.1) Check for `install()` function calls in R code.

BUG FIXES

    o (1.29.14) Various internal improvements to the codebase.
    o (1.29.12) Checks on class membership code now include `is() ==` grammar.
    o (1.29.6) Use appropriate input (`pkgdir`) to internal checking functions.
    o (1.29.3) Add unit tests for legacy function searches.
    o (1.29.2) rename internal function from checkIsPackageAlreadyInRepo to
    checkIsPackageNameAlreadyInUse
